--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
 main {
   height: 100vh;
 }
-  
+
 .App {
   display: flex;
   flex-direction: column;
@@ -65,6 +65,25 @@ h1 {
   transform: translateY(-5px);
 }
 
+.analyzeButton {
+  background-color: #a84fff;
+  border-radius: 16px;
+  color: white;
+  font-weight: 500;
+  transition: 0.4s;
+  padding: 12px 16px;
+  margin-left: 10px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.analyzeButton:hover,
+.analyzeButton:active {
+  background-color: #ff4fa8;
+  box-shadow: 2px 2px 4px #a74fff59;
+  transform: translateY(-1px);
+}
+
 .results {
   max-width: 700px;
   min-width: 500px;
@@ -72,6 +91,11 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.results h3 {
+  font-size: 20px;
+  margin-bottom: 25px;
 }
 
 .result {
