--- a/src/index.css
+++ b/src/index.css
@@ -95,20 +95,26 @@ h1 {
 
 .results h3 {
   font-size: 20px;
-  margin-bottom: 25px;
 }
 
 .result {
   width: 100%;
   padding: 16px;
   margin-bottom: 16px;
-  background-color: white;
   border-radius: 16px;
   transition: 0.4s;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+.golden {
+  background-color: #a74fff2c;
+}
+
+.normal {
+  background-color: white;
 }
 
 .result:hover {
@@ -118,7 +124,6 @@ h1 {
 
 .result h3 {
   color: #888;
-  font-size: 28px;
 }
 
 .result a {
@@ -137,6 +142,10 @@ a:active {
   background-color: #ff4fa8;
   box-shadow: 2px 2px 4px #a74fff59;
   transform: translateY(-1px);
+}
+
+.headerline {
+  margin-bottom: 25px;
 }
 
 @media only screen and (max-width: 1200px) {
